Alterando os direitos

--- a/tracy-arm-fjord.html
+++ b/tracy-arm-fjord.html
@@ -89,7 +89,7 @@
     </footer>
     <div class="direitos">
         <p>
-            &copy; Games Shope - Todos os direitos reservados - 2024
+            &copy; Jhon Jhon - Todos os direitos reservados - 2024
         </p>
     </div>
 </body>
