--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                     O Alasca é considerado por alguns como o estado mais oriental do país, uma vez que duas das ilhas do Arquipélago dos Aleutas estão localizadas no Hemisfério Oriental. A maior parte da população do estado vive na região sul e sudeste do estado.
                 </p>
                 <p>
-                    O nome Alasca provém da palavra Alakshak, que significa "grande terra" ou "grande península". O Alasca foi comprado do Império Russo em 1867, graças à insistência do então Secretário de Estado dos Estados Unidos William Henry Seward, por 7,2 milhões de dólares. À época, Seward foi criticado por outros políticos e ridicularizado pela maioria da população norte-americana pela sua decisão, uma vez que boa parte da população americana acreditava então que o Alasca não passava de uma região coberta de gelo imprestável e que só servia para morada de ursos. Porém, descobertas de grandes reservas de recursos naturais desde então atraíram milhares de pessoas à região. Em 3 de Janeiro de 1959, o território do Alasca foi elevado à categoria de Estado, tornando-se o 49º estado americano.
+                    O nome Alasca provém da palavra Alakshak, que significa "grande terra" ou "grande península". O Alasca foi comprado do Império Russo em 1867, graças à insistência do então Secretário de Estado dos Estados Unidos William Henry Seward, por 7,2 milhões de dólares. À época, Seward foi criticado por outros políticos e ridicularizado pela maioria da população norte-americana pela sua decisão, uma vez que boa parte da população americana acreditava então que o Alasca não passava de uma região coberta de gelo imprestável e que só servia para morada de ursos. Porém, descobertas de grandes reservas de recursos naturais desde então atraíram milhares de pessoas à região.
                 </p>
             </div>
-            <img class="alaska-landscape" src="./imagens/alaska.jpg" alt="Paisagem no alaska">
+            <iframe width="600" height="336" src="https://www.youtube.com/embed/CHSnz0bCaUk?si=diPzCgnwIW1nESa0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
     <section id="pontos turísticos">
@@ -126,7 +126,7 @@
     </footer>
     <div class="direitos">
         <p>
-            &copy; Jhon Jhon - Todos os direitos reservados - 2024
+            &copy; Alaska - Todos os direitos reservados - 2024
         </p>
     </div>
 </body>
