--- a/wildlife-conservation-center.html
+++ b/wildlife-conservation-center.html
@@ -98,7 +98,7 @@
     </footer>
     <div class="direitos">
         <p>
-            &copy; &copy; Jhon Jhon - Todos os direitos reservados - 2024
+            &copy; &copy; Alaska - Todos os direitos reservados - 2024
         </p>
     </div>
 </body>
